k8s/overlays/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(APP)
spec:
  type: ClusterIP
  ports:
    - name: ingress
      port: 80
      targetPort: ingress
