k8s/overlays/ingress/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: $(APP)-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("$(SUBDOMAIN).mchill.io")
      kind: Rule
      services:
        - name: $(APP)
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: $(APP)-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("$(SUBDOMAIN).mchill.lan")
      kind: Rule
      services:
        - name: $(APP)
          port: 80
